--- a/blog/013.md
+++ b/blog/013.md
@@ -7,4 +7,24 @@ _2013-12-26 17:23:12_
 
 * * *
 
-content
+    这个月15号我在公司上的最后一天班，我在最后一天的工作总结里这样写道：没有想到会是这样的结局...第二天老板还以此为措词劝我回去上班，但不过这些都是后话。
+
+    具体辞职原因就要从我思想谈起了：当初面试的时候，我是以C++程序员面试进去的，老板中意我的MFC水平，因为刚毕业，又能用它写小软件，刚毕业要求的工资又都不高，试用期1800元还是2000元，我已经记不太清了，反正转正之后就是2500底薪加全勤加奖金。我选择这个公司的主要原因是他能让我用我喜欢的语言编程，而且老板还是很宽松的，能给我足够的时间让我去学习，我当时提2500的薪酬也是因为我没有毕业时的一份PHP工作已经有2500的工资了，因为想从事C++所以我对薪酬方面不太在意。后来一切谈好了，我就成公司正式一员啦。我现在插入几个关键点，因为我后面要说的和这有莫大的关联。公司不算老板共3个人，这是我当时进去的时候，我离开的时候是6个人，一个是seo，一个是编辑，还有一个是我走之前几天来的一个程序，原来跟老板几年的程序。当时面试的时候，老板不止一次强调，公司正在发展，以后会来更多的员工，其中就有我只关心的 程序大牛 ，还说过，公司会上市，会给公司的好员工分配股分，例如百分之几的股分，听着很诱人。结果是直到我走依旧是没能来大牛，直到我走公司依旧是没有上市。老板还说，公司的奖金是100~1000，再高就是上不封顶，我个人拿出来单独来说，工作还是很卖命的，但是只有第一个月奖金拿了200其余的都是100元。但是第一个月不知道少发我多少工资，那段时间，我都是自嘲说，全当这个月奖金只拿100好了。老板还说公司六个月涨一次工资，乍一听没有什么问题，但是这是我离职的主要原因之一。这种情况我们老板应该是效访那些大公司，每年工资都有例如百分之10的上浮。我当时见识短，反正也没有想那么多，半年就半年，好好干就是啦。之后就是一连五个月无休止的工作，单休，八小时工作制，关键是9点上班哦。午休一个半小时，就意味着六点半才能下班回家。这些也都说出来，大家了解一下。对了，还有一点，公司的规定，中午一点开始午休时间，意思就是一点吃饭哦。
+
+    下面就要说点工作经历：上班的第一天，一般熟悉制度，适应制度，那天老板也是早早就到了，直接就给我安排工作，我要用MFC实现一个上个程序员实现一半的小型程序，接下来就是先看他是如何实现的，但是我那时好像没有看，都是直接百度的，好像是前个程序员留下的版本不是最终版本，借鉴不了太多东西，而老板只留了一个EXE文件。然后中午一点吃饭休息，另我意外的是他们三个回来（加上老板）老板就说：激情三十分钟，开始玩CS。当时第一天上班，出于两个原因，一是不好意思，二是中午有午休的习惯，我就趴那里休息了，我当时应该是睡着了。之后就是一下午，然后就是下班，我当时还故意等另外一个脚本程序一起下班，向他打听了一些关于公司的事情，譬如除了我们两个，另外一个是老板的大学同学等等。我还目送这个朋友上车后，我才开始等我自己回家的车，其实我的车比他的车来的勤...
+
+    下面就要总述我工作中的重要事件：从工作第二天，老板就不按时上班了，我工作五个月，老板准时到公司的次数不多，呵呵，难怪，谁让这是人家的公司呢，由于老板的不在就发生了一件事，中午吃完饭，那两个同事说，要不要玩会，其实那时我还不知道他们要玩的是什么，后来说是魔兽，我说我不会玩，他们还很鄙视的样子，然后他们给我登上，然后就他们给我说着，开始玩魔兽，谁知，玩到中间，门响了，老板进来了，当时的我都没有打算关闭游戏，心想他们两个敢玩，老板应该不会太介意，最多责问一下，结果是，老板把，另个程序叫进去，问道，我进来的时候你在做什么，然后我也被叫了，然后就这事说了好久，具体细节能看到这篇文章的人基本都能想像，然后就是每人200元罚金，当时我来公司好像只有五天的样子。这个事件虽然没有后话，但是更意想不到的是，老板罚钱的第二天，就带我们集体玩魔兽，美其名曰，我带你们通关一次，这样你们的钱罚的也值。工作五个月，玩魔兽不下十五次，关于这个事我不说什么，即便是现在我还是不会玩，也不想玩...
+
+    然后就这样持续，我做的小程序就完工了，老板还算满意吧，15号入的职，第三个月就是正式工资了，意思是我一个半月转正，老板的话是这样说的，没有第二个人是提前转正的，其实我觉得我努力工作了，这是我应得的。之后做这做那，又好像啥都没有做成，拿出一个例子来，老板想让我重新开发一个千年的支付平台，这个小项目因老板迟迟不能给我支付宝的接口ID(时间久了，我也不清楚那叫什么了，专业点好像叫合作者身份ID)然后这个小项目就搁置了。我在这里解释一下为什么第一个月老板相当于仅发了我100元的奖金，其实是200的，分两个原因，这里事先说一下，会不会每个公司的老板算工资的时候，都喜欢装的糊涂一点呢，有同感的小伙伴请举手。我不说当时的细节了，整体来说，我15号入职，7月份有31天，这样看是半个月有多哦。工作了15天，本月的工作日有27天，意思不管怎么算都是半个月多一点，但是老板把多的那点给抹掉了，作为新员工的我当时没有说什么。另外一层原因本来那时候老板的意思是给我发工资，半个多月的算奖金200，第二个整月算奖金200，意思是我有一个半月奖金是200的，这是老板第一次和我说的时候的情况，感觉还行，但是注意两次工资是公开发的，第二次发的时候就不是老板第一次所说的200啦，为这事，我还特意找老板谈了下，但是我的理由总不能说上次老板说好奖金要按200算的，唉，多说无益。但是从那时起我心中就埋下了种子，一旦再有克扣我工资的情况，我就连这两次一块找他要了，还好，以后也再没有克扣过我工资，因为我是尽量不迟到，基本全勤的勤劳员工。至于老板为什么就刚开始给我算200奖金，估计是那时我刚写完公司的MFC小程序...
+
+    接下来说说来的两个新的男性同事，同做SEO的，我当时就不懂了，为什么一下子招进来两个，后来才发现老板是有意为之，留下其中好的，赶走不好的。他们两个来之后，老板共带领着我们玩过两次魔兽，第一次，都还行，我印象不深了，第二次我印象特别深，其中一个稍胖一点的，玩起魔兽很嚣张，稍瘦一点的则好太多，他嚣张到何程度，一直自夸自己魔兽水平，说话很大声，指挥来指挥去的，老板控制的角色都要被他指挥了，还有就是带着耳机不听老板统一安排，每次还需要那个稍瘦一点的喊他一下等等，当时我真想过去劝他低调一点，你和老板抢风头...那次老板就坐在我旁边，我即便再想去，也没有敢去。重点来了，那次玩游戏，我们没有能守住家，输了，之后就是他被叫到办公室，然后第二天就没有再来了，当天晚上下班的时候，老板就对我们宣布，XXX，不适合我们公司，明天他就不来了，我们的SEO就完全交给另外一个人...这里说下我陪老板玩魔兽的风格，因为不会玩所以也无所谓，我基本都是前期守家，让他们去变强，然后他们就能打最后的BOSS，我陪他们玩的时候说的最多的一句话就是，“家、家、家、我死了、赶快回来个”
+
+    接下来公司就来了一位女性同事，关于她我不做任何描述，很平常的一个编辑，但是提她一点，经常性迟到。公司规定，迟到，起步价20+迟到的分钟数，当月迟到两次就拿不到全勤奖100元。我估计她的工资也不算太高，应该没有我高，这样来算，她一个月能拿到多少钱呢？不多谈她，但是她的到来确实使公司的网站管理步入了正规，接下来就有一个事牵联到我，我只平淡的叙述一下，在这里我引导下读者的思考方向，其实我一直以为这是我和老板之间的矛盾。老板以前有一个网站，用什么系统做的，我不说了，前台，后台，关键里面已经有了数据，前台也是CSS 图片等等都算是做好的，算是一个完善的网站了，由于早期老板的疏忽，他在备份的时候没有备份数据库，系统后台进不了，意味着这个系统就是废了。有天老板把我和SEO一起叫到了办公室，问这个系统还能恢复不，我事先了解了这个系统类似织梦，Discuz那样的，而且我以前也做过网站，我自己做后台的时候都把配置写到数据库中，如果这个，所以当时我的观点是不能恢复，或是不好恢复，不如重做一个，把前台页面的样式图片等等住上套来的简单，但是SEO说可以恢复的，老板首先把任务交给了SEO，让他恢复一下，几天后，没有弄好，他应该是老板授意来问我，详细的我忘记了，就是让我给加个后台他来恢复，那天是周六，因为为了能正常下班，我TMD连厕所都没去，先了解那个系统，想办法怎么给它加上个后台。后来研究一个，发现不难，因为写过系统的都知道，一般都会把后台写到一个文件夹里，我的想法是我下载那个系统的同一版本把新的后台给原来的不就好了吗？因为数据库是ACCESS，所以应该是可行的，接下来测试可行倒用了我很长时间，因为来公司上班这么久是没有用到 IIS 的，然后那个系统版本在新的IIS下又出问题，为了节省时间我就放在虚拟机中去搞，后来终于下班前1小时搞好，打包发给SEO，这时候我对SEO的想法就是你说能恢复后来还让我来做...后来他又问过我说这个系统后台有标签什么的，其实话说回来，这些我也不知道，再后来，他就想继续把事情交给我来做，当时对话过程就不说了，我就说我当时这样说的：你直接让老板安排我做吧。后来公司出奇的静，他也没有再说，老板也没有找过我。当然我上班不是闲的人，我那时应该是把孙鑫VC++的教程后几章又看了看，如果我现在还在那个公司，我的勤奋学习就是为那个公司，现在已经不在了，那我那时的勤奋为的就是自己。接下来就是一场会议，我只说关键部分，原话记不清了，公司的事，不愿意干什么的。我在会议上应该直接和老板直接对话了，我说我不想再做网站有关的事，我来工作是C++，后来老板自知会议上多说无意，就说一会会议结束，来我办公室。在办公室，老板的观点，我是重点培养对象，公司的核心员工，SEO不会，正好我会， 正好这两天不是闲吗？（这估计就是他故意放我闲两天的原因吧），而我的观点就是，我会并不代表我愿意从事，我愿意干，是不是别人的事情，因为我会就能全部给我来做呢。后来我就说了我辞职，离职之前把公司这个网站做好。后来老板没有同意，后来一直说，我心里想，跳槽对我来说并不好，我也期待着老板对我承诺的那些虚无飘渺的东西，当初面试我挺感激老板的（郑州C++工作不好找，老板2500留下我，但是现在看来这些都不用太在意），不想把事情做的那么绝，后来我就同意了，而且不辞职，但应该没有下一次。终于成交了，我当时和老板要了一星期的时间来做，因为我对那个系统确实不了解，时间长了灵活性大，但是我第二天，一天做完了，我的方法，就是我最初的想法，拿一个新的系统，自己一点一点加前台，好在这个系统不错，页面都是用模板生成了，当初写这个网站的人水平应该不怎么优秀，因为没有用到太多技术性的东西，只要把这个系统熟悉了，一切好办。后来把这个系统拿给老板看，又打包发给了SEO，里面的文章则是他发表上去的。当天老板还留下我谈了谈，问我是不是和SEO有矛盾，其实虽然他来不短时间了，但是我基本没有和他有过多少交流，上班碰到一起还聊会，帮他开开电梯，因为他要拿着自行车上楼。就算是经过这些事我对他也只是最初他不应该放大话那一点成见，后来我们还是像以住一样。这事最多都在老板，你的员工都会什么你不简单了解下吗？你让SEO写程序，为何当初你还要交给他呢，就算员工没有矛盾，你不是也想激发一下矛盾吗？当初听我的不能恢复了，就是让我仿这个站再临时做个，我的意见应该也不会那么大，毕竟是拿工资的员工啊，最后我也只能说我不想写网站，写好网站就辞职，可尝过骑虎难下的滋味，这件事也算是我现在辞职的重要原因之一吧，不在他事情本身，而在于它是我在公司不能用C++写程序的开始...
+
+    接下来，就是按老板的要求学习LUA脚本语言，当初他还问了我一下，让你写这个应该没有问题吧，我当时说的嗯，难不成当时我还继续辞职啊，朋友公司开发游戏就要用到lua，我心里想着，多学不算多。一直以来我还没有说那位脚本程序员朋友呢。他不爱说话，一起工作同一个东西，怎么能不产生分歧呢，这里我也把分歧说来，我们写同一个版本，分开写，他写A，我写B，因为他是经验比我丰富的人，我一般碰到问题，简单看看帮助，说明不会，就直接去问他，因为我的心里是这样想的，如果仅影响我几分钟的时间，而避免同事长时间的迷茫，我还是非常愿意的。但是他不这样想，他的话是这样说的，我也要写程序，我的思路一断，你即便是问我，有时候我也是要想想，看帮助。那以后我基本问他都是一个问题至少拖很长时间，才会去打扰他。这是我上手千年脚本刚一开始效率非常低的原因，这里这样写，希望他不会怪我。分歧是在版本完成的时候，我写的给他整理，他把我任务文件的地址改变了（我主要改的是任务部分），但是总的创建文件地方漏掉了，我拿到我机器上去测试的时候，总是不对，任务文件在，脚本正常，我反复看，反复看，当时他没有给我说任何东西，就这样一个小时过去了（效率好低）我发现路径不对，我就去问他，你是不是改我写的脚本了，他这样回我，你SVN更新的时候看看不就好了，我改了那么多，我怎么能一一都记得。我当时就生气了，我说，我不只一次说过，我没有在SVN中直接来编程，我是又独立了一个文件夹出来的，等等，最后他还是没有给我说，我问他是不是把任务文件的路径改了，他说是的，替换全改的，让我看一下，但是他那时并不知道他漏掉了创建文件那个环节。之后就关于多交流，你的一个失误使我付出一个多小时的代价的问题展开了激烈的讨论，具体就不再说了，反正我个人更真诚，一个公司就我俩程序员，还能有多大的矛盾？反正话说开后，以后交流其实并没有见太大好转，但是我俩还是往常一样一起下班的朋友，其实不爱说话，是不能对他有太多苛责的，反正事过之后，能敞开心扉就很好了...
+
+    已经到最后了，是说我辞职的时候了，该先描述的已经都说的很清楚了，我朋友们的工资我就不一一在这里细说了，我一北京的朋友在百度工作，大有游说我去北京发展的意思，这里就要说到公司里没有来几天的老员工，为什么这样说他，他是我去公司之前就一直跟着老板工作的。他一来，老板开会直接说他是首席技术员，分管我和那个，上班好像不用打卡哦。应该还是很有能力的，就不多说他了，毕竟不了解。但是他来反而加快了我去提涨薪的进度，本来想好这个月底的，但是他来意味着公司不再那么需要你，加之上次的网站矛盾，我觉得我就放在15号谈，刚进入公司工作的第6个月，谈的是第7个月的工资，我开口要的是3500元工资，我是这样想的，半年涨一次，第一次很重要，你工资的基础，3500元在郑州真的不算是什么高工资。而工资不涨的结果就是辞职，后来老板关于这事又说过我，千万不要以辞职来要挟你的老板，其实我想想是对的，可以说很对，但是我还能有什么能拿来当条件和你谈工资呢？真的没有了，工作不积极，真的不是我的作风，真的还有什么吗？老板原规划是，半年涨一次，一次涨200元（亲们，你们愿意相信吗？我在郑州想拿四千多工资需要在这个公司呆上5年，我没有算错吧，真真切切五年）。结果很明显，那天老板态度也很不好，他也知道我这个人还有挺扭，首先是他让我先出去等着，喊了那位新来的老员工商量，由于老板的态度，我那时已经自知，事情不会太好，那时我已经开始整理我的文件了。后来那个新来的老员工和我谈了很长时间，说他最早跟着老板干的时候1000工资好像都没有。又说我这人编程水平还是很好的，想为留我做努力。其实他确实应该夸我，从他一来，我就意识到我提涨薪，必须提前了，那段时间，我的工作状态好之又好，努力工作为我的涨薪成功加分。我独立又完成了一个版本，为公司实现了换装的lua脚本的编写，在那仅仅不到一个星期的时间里，朋友们可以想像哦。当时我还是3500不松口，后来没有办法，他就去复命老板，我当时在想，再进办公室老板会不会和我讨价还价，3000多我估计会被他磨着留下来，但是确实和本文开始说的一样，没有想到是这样的结局，他并没有讨价还价，我也肯定不会自贬身价主动去求老板3000我留下来行不行，最后再次问我是不是继续坚持3500，坚持不涨辞职，我说是的。然后他就态度很差的同意了，说明天把你的工资全部打你卡上，你查收一下，明天就不用来上班了。我也是我最意外的，他不等来新员工，我帮忙培训一下，直接赶我走了。接下来就是怀着沉重的心情收拾东西，最后走之前，我礼貌性的和同事告了别，进了老板办公室，浅鞠躬，说，老板我走了，我没有妄想长会留我，我只是算是报一下知遇之恩，刚毕业就找到2500的工作，确实还是不错的。但他那天回报我的确是，恶狠狠的瞪了我一眼，不屑的说：走吧走吧...
+
+    第二天晚上，老板电话打到我手机上，打了一个小时，谈了很多，当然不管他如何待我，上下级一场，拿过他的工资，我都应该礼貌说话。他那天主说的是，我被人利用了，不然怎么可能一下子提涨1000的工资。而且他也把公司脚本程序员给裁掉了，那个程序员，走之前和他说了这句话：公司想裁人...我记不太清了。所以老板就更加断定肯定是我被他利用了，所以才给我打的这个电话。我给他再三解释，我也心知，我走他走，公司至少战斗力减一半。但是老板还是坚持自己的想法，就算是我没有被他直接利用，也不无形中被他利用了。这也都不多说了，他中间提到了，我的年终奖都给我想好了，小米3或是电动车，我当时闪过念头是，还是小米3吧，毕竟统一标价的东西，也不至于电动车便宜的贵的都有。可是，电话打来我就深知，这只是他诱我回公司的一个筹码，再多的就不提了，电话结束的时候，他表露了他此次电话的主要目的，“假如，你回到公司，你还坚持你原来的要求吗？” 我说“别人都说我不到南墙不死心，我还坚持我原来的要求”，后来他就说，你真是一颗树上吊死。后来他还是说，一会把工资打我卡上，我查收一下，就挂了电话。这点还真如他所说，第二天清晨我收到了进帐信息，我剩余的工资已经到我的银行卡上了。这次电话，我加两点，不管有没有可能打这次电话，我离开公司的那天，老板态度好些，或许不是这样的结局，又或者他晚几天再打电话，我找一个星期的工作，还没有找到的情况下，他打电话，以年终奖为诱饵，我很可能会回去上班。但是这些都已经是不可能了...
+
+    我这几天拼命的投简历，加之女朋友的压力，不允许去郑州以外的地方发展，辞职的那星期，真的是出师不利，没有接到一个面试通知，我都做好打算，第二星期如果再没有结果，谁也阻止不了我去北京的决心。第二星期刚开始我就差点买好火车票，但是得知北京朋友那里住了人，我去了还要住酒店，不划算，就忍下来了。忍下来当然是继续投简历，投简历这方面真应该表扬下我女朋友，他真的比我付出的多。截至发文，我只收到三个面试通知，其中一家，给不到我3500，程序员出差1个月没有回来，公司只有十几人。另一个公司还是今天准备去面试的，我12点得知的面试地址，1：30准时到，后来，去到一半打个电话就又折回来了，肯定赶不上了，我只想说这家公司因有这样的HR是应该高兴还是伤心呢。再一个就是我周二去面试的公司，周三主管给我打电话要发，周四人事通知我周五去报道，就是明天报道啦，公司规模接近100人吧，试用3000元，转正3500元，一天7.5个小时，早晨8：30上班，转正办理5险+商业保险。一个季度发一次奖金，一年总额会有1W左右。大体就这样了。我还是会以我如火的激情去为我所在的公司效劳... 
