--- a/blog/028.md
+++ b/blog/028.md
@@ -13,7 +13,7 @@ _2015-07-10 16:28:02_
 
 结构图：来自 《23种设计模式 - 郗晓勇》
 
-![](./img/028_1.png)
+![](./img/028_1.jpeg)
 
 实现：https://github.com/panshiqu/patterns/tree/master/Decorator
 
