--- a/blog/042.md
+++ b/blog/042.md
@@ -13,7 +13,7 @@ _2015-07-10 21:55:55_
 
 结构图：截屏于原著
 
-![](./img/042_1.png)
+![](./img/042_1.jpeg)
 
 实现：https://github.com/panshiqu/patterns/tree/master/Visitor
 
