--- a/blog/026.md
+++ b/blog/026.md
@@ -13,7 +13,7 @@ _2015-07-10 15:53:47_
 
 结构图：来自 《23种设计模式 - 郗晓勇》
 
-![](./img/026_1.png)
+![](./img/026_1.jpeg)
 
 实现：https://github.com/panshiqu/patterns/tree/master/Bridge
 
