--- a/blog/033.md
+++ b/blog/033.md
@@ -13,7 +13,7 @@ _2015-07-10 17:37:03_
 
 结构图：来自 《23种设计模式 - 郗晓勇》
 
-![](./img/033_1.png)
+![](./img/033_1.jpeg)
 
 实现：https://github.com/panshiqu/patterns/tree/master/Command
 
