--- a/blog/038.md
+++ b/blog/038.md
@@ -13,7 +13,7 @@ _2015-07-10 21:18:45_
 
 结构图：来自 《23种设计模式 - 郗晓勇》
 
-![](./img/038_1.png)
+![](./img/038_1.jpeg)
 
 实现：https://github.com/panshiqu/patterns/tree/master/Observer
 
